--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "firebase": "^6.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-with-firebase-auth": "^1.0.3",
     "typescript": "3.5.2"
   },
   "scripts": {
@@ -32,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router": "^5.0.2",
+    "@types/react-router-dom": "^4.3.4"
   }
 }
