--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-video-play": "^2.0.3",
     "react-with-firebase-auth": "^1.0.3",
     "typescript": "3.5.2"
   },
