--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "@types/react-modal": "^3.10.0",
     "classnames": "^2.2.6",
     "firebase": "^6.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-video-play": "^2.0.3",
