--- a/services/jvbproductions_services/jvbproductions_services/jvbproductions_services.csproj
+++ b/services/jvbproductions_services/jvbproductions_services/jvbproductions_services.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Autofac.Mvc5" Version="5.0.0" />
     <PackageReference Include="Autofac.WebApi2" Version="5.0.0" />
+    <PackageReference Include="EntityFramework" Version="6.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
